# HiTables

./: IPtablesTransform.cabal  README.md
src/: CalculationBenchmark  CalculationBenchmark.hs  PreprocessingBenchmark  PreprocessingBenchmark.hs  RuleSortBenchmark.hs  iptablesTransform.hs
src/IPtablesTransform/: Datatypes.hs  Emitter.hs  Parser.hs  Rule.hs  Selector.hs  TransformationEngine.hs  Tree.hs  Utils.hs  example.txt
tests/: EmitterTestSuite.hs  ParserTestSuite.hs  RuleTestSuite.hs  SelectorTestSuite.hs  TransformationEngineTestSuite.hs  TreeTestSuite.hs  UtilsTestSuite.hs
tests/IPtablesTransform/: EmitterTest.hs  ParserTest.hs  RuleTest.hs  SelectorTest.hs  TransformationEngineTest.hs  TreeTest.hs  UtilsTest.hs
